--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -9,17 +9,84 @@
     "wdth" 100;
 }
 
+.header{
+    background-image: url(../images/developer.png), url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
+
 .text-primary{
     color: #FD6E0A;
 }
 
+.dark-2{
+    color: #474747;
+}
+
+.btn-parimary{
+    background-color: #FD6E0A;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    padding: 18px 35px;
+    border-radius: 5px;
+    border: none;
+}
 
 /* nav style */
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0  200px;
 }
 
 .nav-title{
     font-weight: 800;
     font-size: 45px;
+}
+
+nav ul{
+    display: flex;
+    align-items: center;
+}
+
+nav ul li{
+    list-style: none;
+    margin-right: 40px;
+}
+
+nav li a{
+    text-decoration: none;
+     font-size: 20px;
+}
+
+/* banner styles */
+
+.banner-greetings{
+    font-size: 40px;
+    font-weight: 600;
+}
+
+.banner-content{
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.banner-description{
+    font-size: 18px;
+}
+
+.banner-portfolio-pic{
+    width: 580px;
+}
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 200px;
+}
+
+.banner-content{
+    max-width: 580px;
 }
