--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -9,6 +9,26 @@
     "wdth" 100;
 }
 
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+
+.secondary-bg{
+    background-color: #FFF8F3;
+}
+
+.secondary-bgg{
+    background-color: #FFF8F3;
+}
+
+
 .header{
     background-image: url(../images/developer.png), url(../images/header_bg.png);
     background-repeat: no-repeat;
@@ -89,4 +109,27 @@ nav li a{
 
 .banner-content{
     max-width: 580px;
+}
+
+
+
+.about{
+    border-radius: 20px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description{
+    font-weight: 600;
 }
