--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -9,6 +9,11 @@
     "wdth" 100;
 }
 
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 .section-title{
     font-size: 35px;
     font-weight: bold;
@@ -133,3 +138,20 @@ main{
 .item-description{
     font-weight: 600;
 }
+
+.text-center{
+    text-align: center;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+
