--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -155,3 +155,28 @@ main{
 }
 
 
+
+/* resume section style */
+
+.resume-container{
+    display: flex;
+    gap: 24px;
+    
+}
+
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.experience-description, .experience-sub-title{
+    color: #757575;
+}
+
+.resume hr{
+    margin: 30px 5px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
