--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -180,3 +180,29 @@ main{
 .resume-download-cv{
     margin-top: 50px;
 }
+
+
+
+/* footer style */
+
+
+footer{
+    padding: 130px  230px;
+    display: flex;
+    gap:110px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    background-color: white;
+    border: none;
+}
